About: A p5.js tropical cyclone simulation game

v20190704b:
    * Fixed non-integer seeds not working correctly
    * advanceSim is now a method of Basin
v20190704a:
    + Added textbox to date navigator for directly entering a year to navigate to
    + Added ability to copy a basin's seed from a text box accessible from a side menu button
    + Added ability to enter a seed in new basin settings using a text box
    * The loading ring on non-rendering waiting screens now looks like a TC
    * Pressing enter on some text boxes now does the same thing as clicking their associated button
    * Tropical waves now spawn more frequently during off-season in hyper mode
v20190702a:
    + Added hypothetical categories (C6-C10 and hypercanes)
        > Optionally enabled upon basin creation
        > C8+ and hypercanes kept track of in season stats
        > Can be spawned in god mode
v20190630a:
    + Added ability to save basins with a custom name using a text box
    * Finished the full switch from localStorage to indexedDB
        > Basins and seasons are now stored in indexedDB
        > Saving no longer limited by the localStorage 5 MB limit (Cyclone Sim can now theoretically save up to 10% of drive space)
    * You can now save an unlimited number of basins
        > Load menu UI updated with pages
    * Saved basins and seasons upgraded to Format 2, which is more efficient and less hacky than the localStorage-limited Format 1
v20190622a:
    * Mostly prepared the simulator for asynchronous saving/loading which will come later with the full transition to indexedDB
    * Some tweaks to input UI
v20190617a:
    * Mostly finished text input UI code for text boxes to be added in later updates
v20190615a:
    * Cleaned up some of the repetative UI code, particularly in the case of buttons
v20190613a:
    + Added partial support for indexedDB saving/loading
        > Currently only used to store settings, while localStorage is still used for basins and seasons