@@ -376,14 +376,35 @@ class Environment{
 Environment.init = function(){
     Env = new Environment();    // Environmental fields that determine storm strength and steering
 
+    let OP = basin.actMode === ACTIVITY_MODE_OP;
+    let wild = basin.actMode === ACTIVITY_MODE_WILD;
+
+    let yearfrac = z=>(z%YEAR_LENGTH)/YEAR_LENGTH;
+    let piecewise = (s,arr)=>{
+        let x = [arr[arr.length-1][0]-12,arr[arr.length-1][1]];
+        for(let q of arr){
+            if(s*12<q[0]) return map(s*12,x[0],q[0],x[1],q[1]);
+            x = q;
+        }
+        return map(s*12,x[0],arr[0][0]+12,x[1],arr[0][1]);
+    };
+
     Env.addField(
         "jetstream",
         function(n,x,y,z){
-            let s = seasonalSine(z);
-            let l = map(sqrt(map(s,-1,1,0,1)),0,1,basin.hyper?0.47:0.55,basin.hyper?0.25:0.35);
             let v = n(0,x-z*3,0,z);
-            let r = map(s,-1,1,basin.hyper?0.45:0.5,basin.hyper?0.25:0.35);
-            v = map(v,0,1,-r,r);
+            let l;
+            if(wild){
+                let s = yearfrac(z);
+                l = piecewise(s,[[1,0.65],[2.5,-0.15],[10,-0.15],[11.5,0.65]]);
+                let r = piecewise(s,[[0.5,0.3],[1.75,0.7],[3,0.2],[9.5,0.2],[10.75,0.7],[12,0.3]]);
+                v = map(v,0,1,-r,r);
+            }else{
+                let s = seasonalSine(z);
+                l = map(sqrt(map(s,-1,1,0,1)),0,1,OP?0.47:0.55,OP?0.25:0.35);
+                let r = map(s,-1,1,OP?0.45:0.5,OP?0.25:0.35);
+                v = map(v,0,1,-r,r);
+            }
             return (l+v)*HEIGHT;
         },
         {
@@ -396,6 +417,23 @@ Environment.init = function(){
         "LLSteering",
         function(n,x,y,z){
             this.vec.set(1);    // reset vector
+
+            if(wild){
+                let s = yearfrac(z);
+                let wind = piecewise(s,[[1,3],[2.5,1],[4.5,0.5],[6,0.75],[7.5,0.65],[7.75,0.05],[8,1.1],[10,1.8],[11,3]]); // wind strength
+                let windAngle = piecewise(s,[[1,13*PI/8],[2.5,9*PI/8],[4.5,PI],[6,17*PI/16],[7.5,17*PI/16],[8,31*PI/16],[10,15*PI/8],[11.5,13*PI/8]]); // wind angle
+                // noise angle
+                let a = map(n(3),0,1,0,4*TAU);
+                // noise magnitude
+                let m = pow(1.5,map(n(2),0,1,-3,4));
+
+                // apply to vector
+                this.vec.rotate(a);
+                this.vec.mult(m);
+                this.vec.add(wind*cos(windAngle),wind*sin(windAngle));
+                this.vec.y = basin.hem(this.vec.y); // hemisphere flip
+                return this.vec;
+            }
 
             // Jetstream
             let j = Env.get("jetstream",x,y,z,true);
@@ -434,28 +472,38 @@ Environment.init = function(){
         function(n,x,y,z){
             this.vec.set(1);                                                                // reset vector
 
-            const dx = 10;                                                                  // delta for derivative
+            const dx = 10;                                                                  // delta-x for jetstream differential
 
             let m = n(1);
 
-            let s = seasonalSine(z);
+            let s;
+            if(wild) s = yearfrac(z);
+            else s = seasonalSine(z);
             let j0 = Env.get("jetstream",x,y,z,true);                                       // y-position of jetstream
-            let j1 = Env.get("jetstream",x+dx,y,z,true);                                    // y-position of jetstream dx to the east for derivative
+            let j1 = Env.get("jetstream",x+dx,y,z,true);                                    // y-position of jetstream dx to the east for differential
             let j = abs(y-j0);                                                              // distance of point north/south of jetstream
-            let jet = pow(2,3-j/40);                                                        // power of jetstream at point
+            let jet = pow(2,3-j/(wild?30:40));                                              // power of jetstream at point
             let jOP = pow(0.7,jet);                                                         // factor for how strong other variables should be if 'overpowered' by jetstream
-            let jAngle = atan((j1-j0)/dx)+map(y-j0,-50,50,PI/4,-PI/4,true);                 // angle of jetstream at point
+            let jAngle = atan((j1-j0)/dx)+map(y-j0,-50,50,wild?PI/15:PI/4,wild?-PI/17:-PI/4,true); // angle of jetstream at point
             let trof = y>j0 ? pow(1.7,map(jAngle,-PI/2,PI/2,3,-5))*pow(0.7,j/20)*jOP : 0;   // pole-eastward push from jetstream dips
             let tAngle = -PI/16;                                                            // angle of push from jetstream dips
-            let ridging = 0.45-j0/HEIGHT-map(sqrt(map(s,-1,1,0,1)),0,1,0.15,0);             // how much 'ridge' or 'trough' there is from jetstream
-            // power of winds equatorward of jetstream
-            let hadley = (map(ridging,-0.3,0.2,basin.hyper?3:5,1.5,true)+map(m,0,1,-1.5,1.5))*jOP*(y>j0?1:0);
-            let hAngle = map(ridging,-0.3,0.2,-PI/16,-15*PI/16,true);                       // angle of winds equatorward of jetstream
-            let ferrel = 2*jOP*(y<j0?1:0);                                                  // power of winds poleward of jetstream
+            let ridging;
+            if(!wild) ridging = 0.45-j0/HEIGHT-map(sqrt(map(s,-1,1,0,1)),0,1,0.15,0);             // how much 'ridge' or 'trough' there is from jetstream
+            let hadley;     // power of winds equatorward of jetstream
+            let hAngle;     // angle of winds equatorward of jetstream
+            if(wild){
+                hadley = (piecewise(s,[[1,4.5],[2.5,1.2],[4,0.5],[4.5,1.7],[5,0.6],[6.5,0.65],[7.5,0.65],[7.75,0.05],[8,1.3],[9,1.7],[10,2.3],[11.5,4.5]]))*jOP*(y>j0?1:0);
+                hAngle = piecewise(s,[[1,11*PI/8],[2.5,9*PI/8],[4,17*PI/16],[4.5,11*PI/8],[5,17*PI/16],[6.5,35*PI/32],[7.5,17*PI/16],[8,31*PI/16],[9,15*PI/8],[10,7*PI/4],[10.5,11*PI/8]]);
+            }else{
+                hadley = (map(ridging,-0.3,0.2,OP?3:5,1.5,true)+map(m,0,1,-1.5,1.5))*jOP*(y>j0?1:0);
+                hAngle = map(ridging,-0.3,0.2,-PI/16,-15*PI/16,true);
+            }
+            let ferrel = 2*jOP*(y<j0?wild?map(j0-y,0,400,1,0,true):1:0);                    // power of winds poleward of jetstream
             let fAngle = 5*PI/8;                                                            // angle of winds poleward of jetstream
 
             let a = map(n(0),0,1,0,4*TAU);                                                  // noise angle
-            m = pow(1.5,map(m,0,1,-8,4))*jOP;                                               // noise magnitude
+            if(wild) m = pow(1.5,map(m,0,1,-3,4))*jOP;
+            else m = pow(1.5,map(m,0,1,-8,4))*jOP;                                          // noise magnitude
 
             // apply noise
             this.vec.rotate(a);
@@ -463,7 +511,7 @@ Environment.init = function(){
 
             // apply UL winds
             this.vec.add(jet*cos(jAngle),jet*sin(jAngle));                                  // apply jetstream
-            this.vec.add(trof*cos(tAngle),trof*sin(tAngle));                                // apply trough push
+            if(!wild) this.vec.add(trof*cos(tAngle),trof*sin(tAngle));                      // apply trough push
             this.vec.add(hadley*cos(hAngle),hadley*sin(hAngle));                            // apply winds equatorward of jetstream
             this.vec.add(ferrel*cos(fAngle),ferrel*sin(fAngle));                            // apply winds poleward of jetstream
 
@@ -502,9 +550,10 @@ Environment.init = function(){
             v = 1-abs(1-v);
             if(v===0) v = 0.000001;
             v = log(v);
-            let r = map(y,0,HEIGHT,6,3);
+            let r = wild ? 5 : map(y,0,HEIGHT,6,3);
             v = -r*v;
             v = v*i;
+            if(wild && v>1.5) v += pow(1.4,v-1.5)-1;
             return v;
         },
         {
@@ -530,16 +579,22 @@ Environment.init = function(){
         function(n,x,y,z){
             if(y<0) return 0;
             let anom = Env.get("SSTAnomaly",x,y,z,true);
-            let s = seasonalSine(z);
+            let s;
+            if(wild){
+                s = yearfrac(z);
+                let t = piecewise(s,[[0,22],[2,25.5],[4,25],[5,26.5],[6,27],[6.25,30],[6.75,31],[7,28],[9,27],[10,26],[11,23]]);
+                return t+anom;
+            }
+            s = seasonalSine(z);
             let w = map(cos(map(x,0,WIDTH,0,PI)),-1,1,0,1);
             let h0 = y/HEIGHT;
             let h1 = (sqrt(h0)+h0)/2;
             let h2 = sqrt(sqrt(h0));
             let h = map(cos(lerp(PI,0,lerp(h1,h2,sq(w)))),-1,1,0,1);
-            let ospt = basin.hyper ? HYPER_OFF_SEASON_POLAR_TEMP : OFF_SEASON_POLAR_TEMP;
-            let pspt = basin.hyper ? HYPER_PEAK_SEASON_POLAR_TEMP : PEAK_SEASON_POLAR_TEMP;
-            let ostt = basin.hyper ? HYPER_OFF_SEASON_TROPICS_TEMP : OFF_SEASON_TROPICS_TEMP;
-            let pstt = basin.hyper ? HYPER_PEAK_SEASON_TROPICS_TEMP : PEAK_SEASON_TROPICS_TEMP;
+            let ospt = OP ? HYPER_OFF_SEASON_POLAR_TEMP : OFF_SEASON_POLAR_TEMP;
+            let pspt = OP ? HYPER_PEAK_SEASON_POLAR_TEMP : PEAK_SEASON_POLAR_TEMP;
+            let ostt = OP ? HYPER_OFF_SEASON_TROPICS_TEMP : OFF_SEASON_TROPICS_TEMP;
+            let pstt = OP ? HYPER_PEAK_SEASON_TROPICS_TEMP : PEAK_SEASON_TROPICS_TEMP;
             let t = lerp(map(s,-1,1,ospt,pspt),map(s,-1,1,ostt,pstt),h);
             return t+anom;
         },
@@ -561,13 +616,17 @@ Environment.init = function(){
         "moisture",
         function(n,x,y,z){
             let v = n(0);
-            let s = seasonalSine(z);
+            let s;
+            if(wild) s = yearfrac(z);
+            else s = seasonalSine(z);
             let l = land.get(x,basin.hemY(y));
-            let pm = basin.hyper ? 0.52 : 0.43;
-            let tm = basin.hyper ? 0.62 : 0.57;
-            let mm = basin.hyper ? 0.3 : 0.2;
-            let m = map(l,0.5,0.7,map(y,0,HEIGHT,pm,tm),mm,true);
-            m += map(s,-1,1,-0.08,0.08);
+            let pm = OP ? 0.52 : 0.43;
+            let tm = wild ? piecewise(s,[
+                [0.5,0.35],[2,0.55],[4,0.6],[5.75,0.58],[6,0.1],[7,0.2],[7.25,0.6],[8.5,0.72],[10,0.55],[11.5,0.35]
+            ]) : OP ? 0.62 : 0.57;
+            let mm = OP ? 0.3 : 0.2;
+            let m = map(l,0.5,0.7,wild?tm:map(y,0,HEIGHT,pm,tm),mm,true);
+            if(!wild) m += map(s,-1,1,-0.08,0.08);
             m += map(v,0,1,-0.3,0.3);
             m = constrain(m,0,1);
             return m;
